--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde                    = { version = "1.0", features = ["derive"] }
 serde_json               = "1.0"
 tokio                    = { version = "1.22.0", features = ["macros", "rt"] }
 prometheus_exporter_base = { version = "1.3.0", features = ["hyper_server"] }
+log = "0.4.27"
+env_logger = "0.11.8"
